--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,8 +4,10 @@
       <a routerLink="/detail/{{hero.id}}">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
       </a>
+      <button class="delete" title="delete hero"
+        (click)="delete(hero)">x</button>
     </li>
-</ul>
+  </ul>
 <div>
     <label>Hero name:
       <input #heroName />
@@ -14,4 +16,4 @@
     <button (click)="add(heroName.value); heroName.value=''">
       add
     </button>
-  </div>
+</div>
